Fixing more z-index issues

--- a/src/client/sass/common.scss
+++ b/src/client/sass/common.scss
@@ -267,7 +267,7 @@ nav {
     background-image: url('/static/img/logo.svg');
     background-position: center;
     background-size: 100%;
-    z-index: 2;
+    z-index: 101;
   }
 
   .search {
@@ -308,7 +308,7 @@ nav {
     display: flex;
     position: relative;
     align-items: center;
-    z-index: 2;
+    z-index: 101;
 
     .image {
       width: 32px;
